[package]
name = "sshf"
version = "0.1.0"
edition = "2021"
description = "Simple SSH agent filtering proxy"
license = "GPL-3.0-only"

[dependencies]
ssh-agent-lib = "0.5"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
glob = "0.3"
anyhow = "1"
ctrlc = "3"
ssh-key = "0.6"
